--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-  <!-- App JS -->
-  <script type="text/javascript" src="/scripts/client.js"></script>
+
+
 </head>
 
 <body>
@@ -60,7 +60,7 @@
           <label for="tweet-text" class='tweet-label'>What are you humming about?</label>
         </header>
         <article>
-          <textarea name="text" id="tweet-text"></textarea>
+          <textarea name="text" id="tweet-text" placeholder="What's happening?"></textarea>
         </article>
         <footer class='tweet-composer-footer'>
           <button type="submit" class='btn-tweet'>Tweet</button>
@@ -78,5 +78,8 @@
       aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
   </main>
 </body>
+
+<!-- App JS -->
+<script type="text/javascript" src="/scripts/client.js"></script>
 
 </html>
