implemented character count

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
         </article>
         <footer class='tweet-composer-footer'>
           <button type="submit" class='btn-tweet'>Tweet</button>
-          <output name="counter" class="counter" for="tweet-text">140</output>
+          <output name="counter" class="counter" for="tweet-text" id='js--tweet-counter'>140</output>
         </footer>
 
       </form>
