--- a/public/index.html
+++ b/public/index.html
@@ -81,5 +81,6 @@
 
 <!-- App JS -->
 <script type="text/javascript" src="/scripts/client.js"></script>
+<script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 
 </html>
