:lipstick: added tweet container

--- a/public/index.html
+++ b/public/index.html
@@ -71,11 +71,27 @@
     </section>
 
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna
-      aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis
-      aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    <section id="tweet-container">
+      <article>
+        <header>
+          <div class="profile">:)</div>
+          <div class="username">Newton</div>
+          <div class="userid">@SirIsaac</div>
+
+        </header>
+        <main class='tweet-content'>
+          I have seen further by standing on the shoulder of giants
+        </main>
+        <footer>
+          <div class="timestamp">10 days ago</div>
+          <div class="tweet-actions">
+            🚀☕️🏴‍☠️
+          </div>
+        </footer>
+      </article>
+    </section>
+
+
   </main>
 </body>
 
