:lipstick: added profile hexagon

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
   <link rel="stylesheet" href="/styles/tweet-composer.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/profile-hexagon.css" type="text/css" />
   <!--   <link rel="stylesheet" href="/styles/debug.css" type="text/css" /> -->
 
   <!-- External JS -->
@@ -40,8 +41,8 @@
 
   <!-- Header -->
   <header class='header'>
-    <div>
-      <img src="/images/profile-hex.png">
+    <div class='hexagon'>
+      <img src="/images/034-lord-ram.png">
     </div>
     <br>
     <div>
@@ -60,7 +61,7 @@
           <label for="tweet-text" class='tweet-label'>What are you humming about?</label>
         </header>
         <article>
-          <textarea name="text" id="tweet-text" placeholder="What's happening?"></textarea>
+          <textarea name="text" id="tweet-text"></textarea>
         </article>
         <footer class='tweet-composer-footer'>
           <button type="submit" class='btn-tweet'>Tweet</button>
@@ -91,7 +92,8 @@
       </article>
     </section>
 
-
+    <div>Icons made by <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp">Eucalyp</a> from <a
+        href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
   </main>
 </body>
 
