:lipstick: removed profile hexagon

--- a/public/index.html
+++ b/public/index.html
@@ -41,8 +41,9 @@
 
   <!-- Header -->
   <header class='header'>
-    <div class='hexagon'>
-      <img src="/images/034-lord-ram.png">
+    <div>
+      <img src='images/profile-hex.png'>
+    </div>
     </div>
     <br>
     <div>
