styling for tweet containers

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
   <link rel="stylesheet" href="/styles/tweet-composer.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/profile-hexagon.css" type="text/css" />
-  <!--   <link rel="stylesheet" href="/styles/debug.css" type="text/css" /> -->
+  <link rel="stylesheet" href="/styles/tweet-container.css" type="text/css" />
+  <!-- <link rel="stylesheet" href="/styles/debug.css" type="text/css" /> -->
 
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -74,12 +74,11 @@
 
 
     <section id="tweet-container">
-      <article>
-        <header>
-          <div class="profile">:)</div>
+      <article class='tweet'>
+        <header class='tweet-header'>
+          <div class="profile"><img src='images/034-lord-ram.png' class='tweet-profile-pic'></div>
           <div class="username">Newton</div>
           <div class="userid">@SirIsaac</div>
-
         </header>
         <main class='tweet-content'>
           I have seen further by standing on the shoulder of giants
