:lipstick: added font-awesome icons

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,700;1,300&display=swap"
     rel="stylesheet">
 
+  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.6/css/all.css">
+
   <!-- App CSS -->
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
@@ -83,10 +85,11 @@
         <main class='tweet-content'>
           I have seen further by standing on the shoulder of giants
         </main>
-        <footer>
+        <footer class='tweet-footer'>
           <div class="timestamp">10 days ago</div>
           <div class="tweet-actions">
-            🚀☕️🏴‍☠️
+            <div class="tweet-action-icon"><i class="far fa-flag"></i>
+            </div> 🚀☕️🏴‍☠️
           </div>
         </footer>
       </article>
