:lipstick: refactoring tweet container css

--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
 
     <section id="tweet-container">
       <article class='tweet'>
-        <header class='tweet-header'>
+        <header>
           <div class="profile"><img src='images/034-lord-ram.png' class='tweet-profile-pic'></div>
           <div class="username">Newton</div>
           <div class="userid">@SirIsaac</div>
@@ -88,8 +88,9 @@
         <footer class='tweet-footer'>
           <div class="timestamp">10 days ago</div>
           <div class="tweet-actions">
-            <div class="tweet-action-icon"><i class="far fa-flag"></i>
-            </div> 🚀☕️🏴‍☠️
+            <div class="tweet-action-icon"><i class="far fa-flag"></i></div>
+            <div class="tweet-action-icon"><i class="fas fa-retweet"></i></div>
+            <div class="tweet-action-icon"><i class="far fa-heart"></i></div>
           </div>
         </footer>
       </article>
