:lipstick: refactoring tweet container css

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
           <div class="username">Newton</div>
           <div class="userid">@SirIsaac</div>
         </header>
-        <main class='tweet-content'>
+        <main>
           I have seen further by standing on the shoulder of giants
         </main>
         <footer class='tweet-footer'>
