:lipstick: refactoring tweet container footer  css

--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
         <main>
           I have seen further by standing on the shoulder of giants
         </main>
-        <footer class='tweet-footer'>
+        <footer>
           <div class="timestamp">10 days ago</div>
           <div class="tweet-actions">
             <div class="tweet-action-icon"><i class="far fa-flag"></i></div>
