--- a/public/index.html
+++ b/public/index.html
@@ -88,9 +88,9 @@
         <footer>
           <div class="timestamp">10 days ago</div>
           <div class="tweet-actions">
-            <div class="tweet-action-icon"><i class="far fa-flag"></i></div>
-            <div class="tweet-action-icon"><i class="fas fa-retweet"></i></div>
-            <div class="tweet-action-icon"><i class="far fa-heart"></i></div>
+            <div><i class="far fa-flag"></i></div>
+            <div><i class="fas fa-retweet"></i></div>
+            <div><i class="far fa-heart"></i></div>
           </div>
         </footer>
       </article>
