:lipstick: refactoring tweet container action buttons css

--- a/public/index.html
+++ b/public/index.html
@@ -96,8 +96,8 @@
       </article>
     </section>
 
-    <div>Icons made by <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp">Eucalyp</a> from <a
-        href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    <div style="margin-top: 300px">Icons made by <a href="https://www.flaticon.com/authors/eucalyp"
+        title="Eucalyp">Eucalyp</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
   </main>
 </body>
 
