:hammer: fixed tweet container css

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
   <link rel="stylesheet" href="/styles/tweet-composer.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/tweet-container.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/tweets-container.css" type="text/css" />
   <!-- <link rel="stylesheet" href="/styles/debug.css" type="text/css" /> -->
 
   <!-- External JS -->
@@ -75,7 +75,7 @@
     </section>
 
 
-    <section id="tweet-container">
+    <section id="tweets-container">
       <article class='tweet'>
         <header>
           <div class="profile"><img src='images/034-lord-ram.png' class='tweet-profile-pic'></div>
