:hammer: fixed some tweet content rendering

--- a/public/index.html
+++ b/public/index.html
@@ -79,14 +79,14 @@
       <article class='tweet'>
         <header>
           <div class="profile"><img src='images/034-lord-ram.png' class='tweet-profile-pic'></div>
-          <div class="username">Newton</div>
-          <div class="userid">@SirIsaac</div>
+          <div class="username">Lord Ram</div>
+          <div class="userid">@thesonofdashrath</div>
         </header>
         <main>
-          I have seen further by standing on the shoulder of giants
+          Give everything your best shot and persevere.
         </main>
         <footer>
-          <div class="timestamp">10 days ago</div>
+          <div class="timestamp">1033 years ago</div>
           <div class="tweet-actions">
             <div><i class="far fa-flag"></i></div>
             <div><i class="fas fa-retweet"></i></div>
