:sparkle: added ajax handler for new tweets

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
     <!-- Tweet composer -->
     <section class="tweet-composer">
 
-      <form action="/tweets" method="post">
+      <form id='js--new-tweet'>
         <header>
           <label for="tweet-text">What are you humming about?</label>
         </header>
