--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
   <main class="container">
 
     <!-- Tweet composer -->
-    <div class="error">This is a error</div>
+    <div class="error" id='js--error-bar'>This is a error</div>
     <section class="tweet-composer">
 
       <form id='js--new-tweet'>
