:sparkle: added animated arrows

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
   <link rel="stylesheet" href="/styles/tweet-composer.css" type="text/css" />
   <link rel="stylesheet" href="/styles/tweets-container.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/arrow-container.css" type="text/css" />
   <!-- <link rel="stylesheet" href="/styles/debug.css" type="text/css" /> -->
 
   <!-- External JS -->
@@ -35,8 +36,12 @@
     <span id="logo">tweeter</span>
     <span class='cta-newtweet'>
       <span><strong>Write</strong> a new tweet</span>
-      <span>VVVVV</span>
-    </span>
+      <div class="arrow-container">
+        <div class="chevron"></div>
+        <div class="chevron"></div>
+        <div class="chevron"></div>
+      </div>
+
 
   </nav>
 
