:sparkle: added sliding tweet composer

--- a/public/index.html
+++ b/public/index.html
@@ -34,20 +34,20 @@
   <!-- Top nav bar (fixed) -->
   <nav id="nav">
     <span id="logo">tweeter</span>
-    <span class='cta-newtweet'>
-      <span><strong>Write</strong> a new tweet</span>
+    <a href='#' class='cta-newtweet' id='js--cta-newtweet'>
       <div class="arrow-container">
         <div class="chevron"></div>
         <div class="chevron"></div>
         <div class="chevron"></div>
       </div>
-
+      <span><strong>Write</strong> a new tweet</span>
+    </a>
 
   </nav>
 
 
   <!-- Header -->
-  <header class='header'>
+  <header class=' header'>
     <div>
       <img src='images/profile-hex.png'>
     </div>
@@ -103,7 +103,8 @@
     </section>
 
     <div style="margin-top: 300px">Icons made by <a href="https://www.flaticon.com/authors/eucalyp"
-        title="Eucalyp">Eucalyp</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+        title="Eucalyp">Eucalyp</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+    </div>
   </main>
 </body>
 
