:lipstick: fixed scroll to top behaviour

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="/styles/tweet-composer.css" type="text/css" />
   <link rel="stylesheet" href="/styles/tweets-container.css" type="text/css" />
   <link rel="stylesheet" href="/styles/arrow-container.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/scrollToTop.css" type="text/css" />
   <!--   <link rel="stylesheet" href="/styles/debug.css" type="text/css" /> -->
 
   <!-- External JS -->
@@ -106,6 +107,11 @@
         title="Eucalyp">Eucalyp</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
     </div>
   </main>
+
+  <a href="#" class="scrollToTop">
+    <i class="fas fa-arrow-circle-up"></i>
+  </a>
+
 </body>
 
 <!-- App JS -->
