--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="/styles/tweets-container.css" type="text/css" />
   <link rel="stylesheet" href="/styles/arrow-container.css" type="text/css" />
   <link rel="stylesheet" href="/styles/scrollToTop.css" type="text/css" />
-  <!--   <link rel="stylesheet" href="/styles/debug.css" type="text/css" /> -->
+  <!--  <link rel="stylesheet" href="/styles/debug.css" type="text/css" /> -->
 
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -50,14 +50,12 @@
 
 
   <!-- Header -->
-  <header class=' header'>
+  <header class='header'>
     <div>
       <img src='images/profile-hex.png'>
     </div>
-    </div>
-    <br>
     <div>
-      <h2>Your Name</h2>
+      <span class='firstname'>Yoga</span><span>Afficiando</span>
     </div>
   </header>
 
