--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="/styles/tweets-container.css" type="text/css" />
   <link rel="stylesheet" href="/styles/arrow-container.css" type="text/css" />
   <link rel="stylesheet" href="/styles/scrollToTop.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/media-queries.css" type="text/css" />
   <!--  <link rel="stylesheet" href="/styles/debug.css" type="text/css" /> -->
 
   <!-- External JS -->
@@ -29,7 +30,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
 
 
-
+  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 
 </head>
 
