--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,7 @@
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.6/css/all.css">
 
   <!-- App CSS -->
-  <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/header.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/tweet-composer.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/tweets-container.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/arrow-container.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/scrollToTop.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/media-queries.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/index.css" type="text/css" />
   <!--  <link rel="stylesheet" href="/styles/debug.css" type="text/css" /> -->
 
   <!-- External JS -->
