:art: general structure of index.html

--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,20 @@
 
 <head>
   <!-- Meta Information -->
+  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
   <title>Tweeter - Home Page</title>
 
   <!-- External CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     type="text/css" />
+  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.6/css/all.css">
+
+
+  <!-- Google fonts -->
   <link
     href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,700;1,300&display=swap"
     rel="stylesheet">
 
-  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.6/css/all.css">
 
   <!-- App CSS -->
   <link rel="stylesheet" href="/styles/index.css" type="text/css" />
@@ -22,7 +26,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
 
 
-  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 
 </head>
 
