:art: general structure of index.html

--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
 
-
-
 </head>
 
 <body>
@@ -45,7 +43,6 @@
   </nav>
 
   <!--responsive container -->
-
   <section class='main-container'>
 
 
@@ -81,22 +78,25 @@
         </form>
       </section>
 
-
+      <!-- Tweet container to contain all tweets (use flex-direction column reverse for showing new tweets first) -->
       <section id="tweets-container">
-
       </section>
 
 
     </main>
   </section>
+
+  <!--scroll to top css-->
   <a href="#" class="scrollToTop">
     <i class="fas fa-arrow-circle-up"></i>
   </a>
+
+  <!--foot note-->
   <div class='foot-note'>Icons made by <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp">Eucalyp</a>
     from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
   </div>
+  </section>
 </body>
-</section>
 <!-- App JS -->
 <script type="text/javascript" src="/scripts/client.js"></script>
 <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
